// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`experimentSettingsReducer Adds new object properly 1`] = `
{
  "info": {
    "experimentId": null,
    "experimentName": null,
    "pipelineVersion": null,
    "sampleIds": [],
  },
  "originalProcessing": {
    "configureEmbedding": {
      "embeddingSettings": {
        "newProperty": {
          "name": "a",
          "value": "b",
        },
      },
    },
  },
  "processing": {
    "configureEmbedding": {
      "embeddingSettings": {
        "newProperty": {
          "name": "a",
          "value": "b",
        },
      },
    },
    "meta": {
      "changedQCFilters": Set {},
      "completingStepError": false,
      "loading": false,
      "loadingSettingsError": false,
    },
  },
}
`;

exports[`experimentSettingsReducer Adds new value properly 1`] = `
{
  "info": {
    "experimentId": null,
    "experimentName": null,
    "pipelineVersion": null,
    "sampleIds": [],
  },
  "originalProcessing": {
    "configureEmbedding": {
      "embeddingSettings": {
        "newProperty": "property",
      },
    },
  },
  "processing": {
    "configureEmbedding": {
      "embeddingSettings": {
        "newProperty": "property",
      },
    },
    "meta": {
      "changedQCFilters": Set {},
      "completingStepError": false,
      "loading": false,
      "loadingSettingsError": false,
    },
  },
}
`;

exports[`experimentSettingsReducer Changing filter enabled property updates sample filter enabled property as well 1`] = `
{
  "info": {
    "experimentId": null,
    "experimentName": null,
    "pipelineVersion": 1,
    "sampleIds": [],
  },
  "originalProcessing": {
    "cellSizeDistribution": {
      "sample-KO": {
        "auto": true,
        "enabled": true,
        "filterSettings": {
          "binStep": 200,
          "minCellSize": 10800,
        },
      },
    },
    "classifier": {
      "sample-KO": {
        "auto": true,
        "enabled": true,
        "filterSettings": {
          "FDR": 0.1,
        },
        "prefiltered": false,
      },
    },
    "configureEmbedding": {
      "clusteringSettings": {
        "method": "louvain",
        "methodSettings": {
          "louvain": {
            "resolution": 0.5,
          },
        },
      },
      "embeddingSettings": {
        "method": "umap",
        "methodSettings": {
          "tsne": {
            "learningRate": 200,
            "perplexity": 30,
          },
          "umap": {
            "distanceMetric": "euclidean",
            "minimumDistance": 0.1,
          },
        },
      },
      "enabled": true,
    },
    "dataIntegration": {
      "dataIntegration": {
        "method": "harmony",
        "methodSettings": {
          "fastmnn": {
            "normalisation": "logNormalize",
            "numGenes": 2000,
          },
          "harmony": {
            "normalisation": "logNormalize",
            "numGenes": 2000,
          },
          "seuratv4": {
            "normalisation": "logNormalize",
            "numGenes": 2000,
          },
          "unisample": {
            "normalisation": "logNormalize",
            "numGenes": 2000,
          },
        },
      },
      "dimensionalityReduction": {
        "excludeGeneCategories": [],
        "method": "rpca",
        "numPCs": 30,
      },
      "enabled": true,
    },
    "doubletScores": {
      "sample-KO": {
        "auto": true,
        "enabled": true,
        "filterSettings": {
          "binStep": 0.05,
          "probabilityThreshold": 0.2,
        },
      },
    },
    "meta": {
      "changedQCFilters": Set {},
      "completingStepError": false,
      "loading": false,
      "loadingSettingsError": false,
    },
    "mitochondrialContent": {
      "sample-KO": {
        "auto": true,
        "enabled": true,
        "filterSettings": {
          "method": "absoluteThreshold",
          "methodSettings": {
            "absoluteThreshold": {
              "binStep": 200,
              "maxFraction": 0.1,
            },
          },
        },
      },
    },
    "numGenesVsNumUmis": {
      "sample-KO": {
        "auto": true,
        "enabled": true,
        "filterSettings": {
          "regressionType": "gam",
          "regressionTypeSettings": {
            "gam": {
              "p.level": 0.00009,
            },
          },
        },
      },
    },
  },
  "processing": {
    "cellSizeDistribution": {
      "sample-KO": {
        "auto": true,
        "enabled": false,
        "filterSettings": {
          "binStep": 200,
          "minCellSize": 10800,
        },
      },
    },
    "classifier": {
      "sample-KO": {
        "auto": true,
        "enabled": true,
        "filterSettings": {
          "FDR": 0.1,
        },
        "prefiltered": false,
      },
    },
    "configureEmbedding": {
      "clusteringSettings": {
        "method": "louvain",
        "methodSettings": {
          "louvain": {
            "resolution": 0.5,
          },
        },
      },
      "embeddingSettings": {
        "method": "umap",
        "methodSettings": {
          "tsne": {
            "learningRate": 200,
            "perplexity": 30,
          },
          "umap": {
            "distanceMetric": "euclidean",
            "minimumDistance": 0.1,
          },
        },
      },
      "enabled": true,
    },
    "dataIntegration": {
      "dataIntegration": {
        "method": "harmony",
        "methodSettings": {
          "fastmnn": {
            "normalisation": "logNormalize",
            "numGenes": 2000,
          },
          "harmony": {
            "normalisation": "logNormalize",
            "numGenes": 2000,
          },
          "seuratv4": {
            "normalisation": "logNormalize",
            "numGenes": 2000,
          },
          "unisample": {
            "normalisation": "logNormalize",
            "numGenes": 2000,
          },
        },
      },
      "dimensionalityReduction": {
        "excludeGeneCategories": [],
        "method": "rpca",
        "numPCs": 30,
      },
      "enabled": true,
    },
    "doubletScores": {
      "sample-KO": {
        "auto": true,
        "enabled": true,
        "filterSettings": {
          "binStep": 0.05,
          "probabilityThreshold": 0.2,
        },
      },
    },
    "meta": {
      "changedQCFilters": Set {
        "cellSizeDistribution",
      },
      "completingStepError": false,
      "loading": false,
      "loadingSettingsError": false,
    },
    "mitochondrialContent": {
      "sample-KO": {
        "auto": true,
        "enabled": true,
        "filterSettings": {
          "method": "absoluteThreshold",
          "methodSettings": {
            "absoluteThreshold": {
              "binStep": 200,
              "maxFraction": 0.1,
            },
          },
        },
      },
    },
    "numGenesVsNumUmis": {
      "sample-KO": {
        "auto": true,
        "enabled": true,
        "filterSettings": {
          "regressionType": "gam",
          "regressionTypeSettings": {
            "gam": {
              "p.level": 0.00009,
            },
          },
        },
      },
    },
  },
}
`;

exports[`experimentSettingsReducer Correctly updates pipelineVersion 1`] = `
{
  "info": {
    "experimentId": null,
    "experimentName": null,
    "pipelineVersion": 2,
    "sampleIds": [],
  },
  "originalProcessing": {
    "cellSizeDistribution": {
      "sample-KO": {
        "auto": true,
        "enabled": true,
        "filterSettings": {
          "binStep": 200,
          "minCellSize": 10800,
        },
      },
    },
    "classifier": {
      "sample-KO": {
        "auto": true,
        "enabled": true,
        "filterSettings": {
          "FDR": 0.1,
        },
        "prefiltered": false,
      },
    },
    "configureEmbedding": {
      "clusteringSettings": {
        "method": "louvain",
        "methodSettings": {
          "louvain": {
            "resolution": 0.5,
          },
        },
      },
      "embeddingSettings": {
        "method": "umap",
        "methodSettings": {
          "tsne": {
            "learningRate": 200,
            "perplexity": 30,
          },
          "umap": {
            "distanceMetric": "euclidean",
            "minimumDistance": 0.1,
          },
        },
      },
      "enabled": true,
    },
    "dataIntegration": {
      "dataIntegration": {
        "method": "harmony",
        "methodSettings": {
          "fastmnn": {
            "normalisation": "logNormalize",
            "numGenes": 2000,
          },
          "harmony": {
            "normalisation": "logNormalize",
            "numGenes": 2000,
          },
          "seuratv4": {
            "normalisation": "logNormalize",
            "numGenes": 2000,
          },
          "unisample": {
            "normalisation": "logNormalize",
            "numGenes": 2000,
          },
        },
      },
      "dimensionalityReduction": {
        "excludeGeneCategories": [],
        "method": "rpca",
        "numPCs": 30,
      },
      "enabled": true,
    },
    "doubletScores": {
      "sample-KO": {
        "auto": true,
        "enabled": true,
        "filterSettings": {
          "binStep": 0.05,
          "probabilityThreshold": 0.2,
        },
      },
    },
    "meta": {
      "changedQCFilters": Set {},
      "completingStepError": false,
      "loading": false,
      "loadingSettingsError": false,
    },
    "mitochondrialContent": {
      "sample-KO": {
        "auto": true,
        "enabled": true,
        "filterSettings": {
          "method": "absoluteThreshold",
          "methodSettings": {
            "absoluteThreshold": {
              "binStep": 200,
              "maxFraction": 0.1,
            },
          },
        },
      },
    },
    "numGenesVsNumUmis": {
      "sample-KO": {
        "auto": true,
        "enabled": true,
        "filterSettings": {
          "regressionType": "gam",
          "regressionTypeSettings": {
            "gam": {
              "p.level": 0.00009,
            },
          },
        },
      },
    },
  },
  "processing": {
    "cellSizeDistribution": {
      "sample-KO": {
        "auto": true,
        "enabled": true,
        "filterSettings": {
          "binStep": 200,
          "minCellSize": 10800,
        },
      },
    },
    "classifier": {
      "sample-KO": {
        "auto": true,
        "enabled": true,
        "filterSettings": {
          "FDR": 0.1,
        },
        "prefiltered": false,
      },
    },
    "configureEmbedding": {
      "clusteringSettings": {
        "method": "louvain",
        "methodSettings": {
          "louvain": {
            "resolution": 0.5,
          },
        },
      },
      "embeddingSettings": {
        "method": "umap",
        "methodSettings": {
          "tsne": {
            "learningRate": 200,
            "perplexity": 30,
          },
          "umap": {
            "distanceMetric": "euclidean",
            "minimumDistance": 0.1,
          },
        },
      },
      "enabled": true,
    },
    "dataIntegration": {
      "dataIntegration": {
        "method": "harmony",
        "methodSettings": {
          "fastmnn": {
            "normalisation": "logNormalize",
            "numGenes": 2000,
          },
          "harmony": {
            "normalisation": "logNormalize",
            "numGenes": 2000,
          },
          "seuratv4": {
            "normalisation": "logNormalize",
            "numGenes": 2000,
          },
          "unisample": {
            "normalisation": "logNormalize",
            "numGenes": 2000,
          },
        },
      },
      "dimensionalityReduction": {
        "excludeGeneCategories": [],
        "method": "rpca",
        "numPCs": 30,
      },
      "enabled": true,
    },
    "doubletScores": {
      "sample-KO": {
        "auto": true,
        "enabled": true,
        "filterSettings": {
          "binStep": 0.05,
          "probabilityThreshold": 0.2,
        },
      },
    },
    "meta": {
      "changedQCFilters": Set {},
      "completingStepError": false,
      "loading": false,
      "loadingSettingsError": false,
    },
    "mitochondrialContent": {
      "sample-KO": {
        "auto": true,
        "enabled": true,
        "filterSettings": {
          "method": "absoluteThreshold",
          "methodSettings": {
            "absoluteThreshold": {
              "binStep": 200,
              "maxFraction": 0.1,
            },
          },
        },
      },
    },
    "numGenesVsNumUmis": {
      "sample-KO": {
        "auto": true,
        "enabled": true,
        "filterSettings": {
          "regressionType": "gam",
          "regressionTypeSettings": {
            "gam": {
              "p.level": 0.00009,
            },
          },
        },
      },
    },
  },
}
`;

exports[`experimentSettingsReducer Updates existing value properly 1`] = `
{
  "info": {
    "experimentId": null,
    "experimentName": null,
    "pipelineVersion": null,
    "sampleIds": [],
  },
  "originalProcessing": {
    "configureEmbedding": {
      "embeddingSettings": {
        "method": "newMethod",
      },
    },
  },
  "processing": {
    "configureEmbedding": {
      "embeddingSettings": {
        "method": "newMethod",
      },
    },
    "meta": {
      "changedQCFilters": Set {},
      "completingStepError": false,
      "loading": false,
      "loadingSettingsError": false,
    },
  },
}
`;

exports[`experimentSettingsReducer Updates sample settings properly 1`] = `
{
  "info": {
    "experimentId": null,
    "experimentName": null,
    "pipelineVersion": 1,
    "sampleIds": [],
  },
  "originalProcessing": {
    "cellSizeDistribution": {
      "sample-KO": {
        "auto": true,
        "enabled": true,
        "filterSettings": {
          "binStep": 200,
          "minCellSize": 10800,
        },
      },
    },
    "classifier": {
      "sample-KO": {
        "auto": true,
        "enabled": true,
        "filterSettings": {
          "FDR": 0.1,
        },
        "prefiltered": false,
      },
    },
    "configureEmbedding": {
      "clusteringSettings": {
        "method": "louvain",
        "methodSettings": {
          "louvain": {
            "resolution": 0.5,
          },
        },
      },
      "embeddingSettings": {
        "method": "umap",
        "methodSettings": {
          "tsne": {
            "learningRate": 200,
            "perplexity": 30,
          },
          "umap": {
            "distanceMetric": "euclidean",
            "minimumDistance": 0.1,
          },
        },
      },
      "enabled": true,
    },
    "dataIntegration": {
      "dataIntegration": {
        "method": "harmony",
        "methodSettings": {
          "fastmnn": {
            "normalisation": "logNormalize",
            "numGenes": 2000,
          },
          "harmony": {
            "normalisation": "logNormalize",
            "numGenes": 2000,
          },
          "seuratv4": {
            "normalisation": "logNormalize",
            "numGenes": 2000,
          },
          "unisample": {
            "normalisation": "logNormalize",
            "numGenes": 2000,
          },
        },
      },
      "dimensionalityReduction": {
        "excludeGeneCategories": [],
        "method": "rpca",
        "numPCs": 30,
      },
      "enabled": true,
    },
    "doubletScores": {
      "sample-KO": {
        "auto": true,
        "enabled": true,
        "filterSettings": {
          "binStep": 0.05,
          "probabilityThreshold": 0.2,
        },
      },
    },
    "meta": {
      "changedQCFilters": Set {},
      "completingStepError": false,
      "loading": false,
      "loadingSettingsError": false,
    },
    "mitochondrialContent": {
      "sample-KO": {
        "auto": true,
        "enabled": true,
        "filterSettings": {
          "method": "absoluteThreshold",
          "methodSettings": {
            "absoluteThreshold": {
              "binStep": 200,
              "maxFraction": 0.1,
            },
          },
        },
      },
    },
    "numGenesVsNumUmis": {
      "sample-KO": {
        "auto": true,
        "enabled": true,
        "filterSettings": {
          "regressionType": "gam",
          "regressionTypeSettings": {
            "gam": {
              "p.level": 0.00009,
            },
          },
        },
      },
    },
  },
  "processing": {
    "cellSizeDistribution": {
      "sample-KO": {
        "auto": true,
        "enabled": true,
        "filterSettings": {
          "binStep": 400,
          "minCellSize": 10800,
        },
      },
    },
    "classifier": {
      "sample-KO": {
        "auto": true,
        "enabled": true,
        "filterSettings": {
          "FDR": 0.1,
        },
        "prefiltered": false,
      },
    },
    "configureEmbedding": {
      "clusteringSettings": {
        "method": "louvain",
        "methodSettings": {
          "louvain": {
            "resolution": 0.5,
          },
        },
      },
      "embeddingSettings": {
        "method": "umap",
        "methodSettings": {
          "tsne": {
            "learningRate": 200,
            "perplexity": 30,
          },
          "umap": {
            "distanceMetric": "euclidean",
            "minimumDistance": 0.1,
          },
        },
      },
      "enabled": true,
    },
    "dataIntegration": {
      "dataIntegration": {
        "method": "harmony",
        "methodSettings": {
          "fastmnn": {
            "normalisation": "logNormalize",
            "numGenes": 2000,
          },
          "harmony": {
            "normalisation": "logNormalize",
            "numGenes": 2000,
          },
          "seuratv4": {
            "normalisation": "logNormalize",
            "numGenes": 2000,
          },
          "unisample": {
            "normalisation": "logNormalize",
            "numGenes": 2000,
          },
        },
      },
      "dimensionalityReduction": {
        "excludeGeneCategories": [],
        "method": "rpca",
        "numPCs": 30,
      },
      "enabled": true,
    },
    "doubletScores": {
      "sample-KO": {
        "auto": true,
        "enabled": true,
        "filterSettings": {
          "binStep": 0.05,
          "probabilityThreshold": 0.2,
        },
      },
    },
    "meta": {
      "changedQCFilters": Set {},
      "completingStepError": false,
      "loading": false,
      "loadingSettingsError": false,
    },
    "mitochondrialContent": {
      "sample-KO": {
        "auto": true,
        "enabled": true,
        "filterSettings": {
          "method": "absoluteThreshold",
          "methodSettings": {
            "absoluteThreshold": {
              "binStep": 200,
              "maxFraction": 0.1,
            },
          },
        },
      },
    },
    "numGenesVsNumUmis": {
      "sample-KO": {
        "auto": true,
        "enabled": true,
        "filterSettings": {
          "regressionType": "gam",
          "regressionTypeSettings": {
            "gam": {
              "p.level": 0.00009,
            },
          },
        },
      },
    },
  },
}
`;
